--- a/login.html
+++ b/login.html
@@ -28,7 +28,7 @@
             <p>Password: <br>
         <input type="password" name="password" placeholder="Password" id="password" required>
         </p>
-    <input type="submit" value="submit" class="submit">
+    <a href="user_account.html"><input type="submit" value="submit" class="submit"></a>
         <p class="not-registered">Not Registered. <a href="tutorreg.html">Register</a></p>
     
     </form> 
