--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <div class="row h-100 align-items-center justify-content-center">
                         <div class="col-12 col-lg-9">
                             <div class="welcome-text text-center">
-                                <h2 data-animation="fadeInUp" data-delay="300ms">Spend and <span>EARN</span> now</h2>
+                                <h2 data-animation="fadeInUp" data-delay="300ms"><span> BANKING</span> Solution</h2>
                                 <!-- <p data-animation="fadeInUp" data-delay="500ms">Vestibulum eu vehicula elit, nec elementum orci. Praesent aliquet ves tibulum tempus. Pellentesque posuere pharetra turpis, eget finibus erat porta placerat.</p> -->
                                 <a href="tutorreg.html" class="btn credit-btn mt-50" data-animation="fadeInUp" data-delay="700ms">Sign-up</a>
                             </div>
