--- a/login.html
+++ b/login.html
@@ -113,6 +113,7 @@
             <input type="password" name="password" placeholder="Password" id="password" required>
             </p>
         <!-- <input  type="submit" value="submit" class="submit"> -->
+        <input type="submit" value="SUBMIT" class="submit">
         <p class="not-registered"><a href="user_account.html">Submit</a></p>
             <p class="not-registered">Not Registered. <a href="tutorreg.html">Register</a></p>
         
