--- a/post.html
+++ b/post.html
@@ -39,7 +39,7 @@
                     <div class="col-12 d-flex justify-content-between">
                         <!-- Logo Area -->
                         <div class="logo">
-                            <a href="index.html"><img src="img/core-img/logo.png" alt=""></a>
+                            <a href="index.php"><img src="img/core-img/logo.png" alt=""></a>
                         </div>
 
                         <!-- Top Contact Info -->
@@ -75,7 +75,7 @@
                             <!-- Nav Start -->
                             <div class="classynav">
                                 <ul>
-                                    <li><a href="index.html">Home</a></li>
+                                    <li><a href="index.php">Home</a></li>
                                     <li><a href="about.html">About Us</a></li>
                                     <li><a href="services.html">Services</a>
                                         <div class="dropdown">
@@ -87,7 +87,7 @@
                                         </li>
                                     <li><a href="post.html">Blog</a></li>
                                     <li><a href="contact.html">Contact</a></li>
-                                    <li><a href="login.html">Login</a></li>
+                                    <li><a href="login.php">Login</a></li>
                                 </ul>
                             </div>
                             <!-- Nav End -->
